syntax = "proto3";

package library;

service AuthService {
    rpc AddUser(AddUserRequest) returns (AddUserResponse) {}
    rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
    rpc ListUsers(ListUsersRequest) returns (stream ListUsersResponse) {}
}

message User {
    int32 id = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
}

message AddUserRequest {
    string first_name = 1;
    string last_name = 2;
    string email = 3;
}

message AddUserResponse {
    int32 id = 1;
}

message GetUserRequest {
    int32 id = 1;
}

message GetUserResponse {
    int32 id = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
}

message ListUsersRequest {}

message ListUsersResponse {
    int32 id = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
}
